--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
   <div id="headercon">
   <header>
     <nav>
-    
     <a href="#aboutcon" id="aabout" class="toggle-button">About</a>
+    <a href="#projects" id="aproj" class="toggle-button">Projects</a>
    <a href="#certcon" id="acert" class="toggle-button">Certificates</a>
     <a href="#concon" id="acon" class="toggle-button">Contact</a>
-  
     
     </nav>
   </header>
@@ -46,6 +45,14 @@
 <div class="box"></div>
 <div class="box"></div>
 </div>
+    <div id="projects">
+<h2>Projects</h2>
+ <h3>API Project</h3> 
+<p>A collection of API request and Consumption across multiple different APIs.</p>
+   <a href="https://sem2093.github.io/SteveMiller/">View Project</a>
+    </div>
+
+      <div>
     <div id="aboutcon">
       <p class="about" >Hi!, my names Steven Everett Miller II and I'm a full-stack developer. I'm primarily self-taught but have utilized many different learning tools. I graduated from Alta High School in Sandy, UT in 2012 and studied at Brigham Young University in Provo, UT.</p>
     </div>
