--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <h2>Projects</h2>
  <h3>API Project</h3> 
 <p>A collection of API request and Consumption across multiple different APIs.</p>
-   <a href="https://sem2093.github.io/SteveMiller/">View Project</a>
+   <a href="https://sem2093.github.io/apiproject/">View Project</a>
     </div>
 
       <div>
