--- a/index.html
+++ b/index.html
@@ -7,6 +7,37 @@
   <link rel="stylesheet" href="styles.css" />
   </head>
 <body>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Features</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Pricing</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Dropdown link
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
   <!-------header---------->
   <div id="headercon">
   <header>
@@ -20,31 +51,7 @@
   </header>
   </div>
   <main>
-    <div class="container">
-<div class="box"></div>
-<div class="box"></div>
-<div class="box"></div>
-</div>
-<div class="container">
-<div class="box"></div>
-<div class="box"></div>
-<div class="box"></div>
-</div>
-<div class="container">
-<div class="box"></div>
-<div class="box"></div>
-<div class="box"></div>
-</div>
-<div class="container">
-<div class="box"></div>
-<div class="box"></div>
-<div class="box"></div>
-</div>
-<div class="container">
-<div class="box"></div>
-<div class="box"></div>
-<div class="box"></div>
-</div>
+    
     <div id="projects">
 <h2>Projects</h2>
  <h3>API Project</h3> 
@@ -73,31 +80,7 @@
   <p>Email: sem2093@gmail.com</p>
       <p>Phone: 937-474-9664</p>
   </div>
-    <div class="container">
-<div class="box"></div>
-<div class="box"></div>
-<div class="box"></div>
-</div>
-<div class="container">
-<div class="box"></div>
-<div class="box"></div>
-<div class="box"></div>
-</div>
-<div class="container">
-<div class="box"></div>
-<div class="box"></div>
-<div class="box"></div>
-</div>
-<div class="container">
-<div class="box"></div>
-<div class="box"></div>
-<div class="box"></div>
-</div>
-<div class="container">
-<div class="box"></div>
-<div class="box"></div>
-<div class="box"></div>
-</div>
+    
   </main>
   <div id="footercon">
     <footer>
