--- a/index.html
+++ b/index.html
@@ -5,55 +5,50 @@
   <meta name="viewport" content="width=device-width" />
 <title>Steven Miller</title>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
   </head>
 <body>
+  <header>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">Steven Miller Portfolio</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="https://sem2093.github.io/portfolio/">Hi!</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="#aboutcon">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link" href="#certcon">Certifications</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#concon">Contact Me</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown link
+            Projects
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li><a class="dropdown-item" href="#apiproject">API Project</a></li>
+            <li><a class="dropdown-item" href="#">React App</a></li>
+            <li><a class="dropdown-item" href="#">JS anywhere code challenges</a></li>
           </ul>
         </li>
       </ul>
     </div>
   </div>
 </nav>
+</header>
   <!-------header---------->
-  <div id="headercon">
-  <header>
-    <nav>
-    <a href="#aboutcon" id="aabout" class="toggle-button">About</a>
-    <a href="#projects" id="aproj" class="toggle-button">Projects</a>
-   <a href="#certcon" id="acert" class="toggle-button">Certificates</a>
-    <a href="#concon" id="acon" class="toggle-button">Contact</a>
-    
-    </nav>
-  </header>
-  </div>
+  
   <main>
     
-    <div id="projects">
-<h2>Projects</h2>
+    <div id="apiproject">
  <h3>API Project</h3> 
 <p>A collection of API request and Consumption across multiple different APIs.</p>
    <a href="https://sem2093.github.io/apiproject/">View Project</a>
@@ -87,13 +82,7 @@
       <p> &copy; 2023 Steven Miller. All rights reserved.</p>
     </footer>
 </div>
-  <!-- Load Babel -->
-<script src="babel.min.js"></script>
- <script src="react.min.js"></script>
- <script src="react-dom.min.js"></script>
-<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-<!-- Your custom script here -->
-<script src="jsx-file.js" type="text/babel"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></style>
 <script src="script.js"></script>
 </body>
 </html>
