--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html> 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width" />
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Steven Miller</title>
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
@@ -77,11 +77,12 @@
   </div>
     
   </main>
-  <div id="footercon">
-    <footer>
+  <footer>
+  <div id="copyright">
       <p> &copy; 2023 Steven Miller. All rights reserved.</p>
+      <div>
     </footer>
-</div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></style>
 <script src="script.js"></script>
 </body>
