--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   </head>
 <body class="bg-primary">
   <header>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary bg-secondary">
-  <div class="container-fluid">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary ">
+  <div class="container-fluid bg-secondary">
     <a class="navbar-brand" href="#">Steven Miller Portfolio</a>
     <button class="navbar-toggler bg-warning" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <div class="collapse navbar-collapse bg-warning" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="https://sem2093.github.io/portfolio/">Hi!</a>
