--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
   </head>
 <body class="bg-primary">
-  <header>
+  <header class="bg-danger">
   <nav class="navbar navbar-expand-lg bg-body-tertiary ">
   <div class="container-fluid bg-secondary">
     <a class="navbar-brand" href="#">Steven Miller Portfolio</a>
@@ -33,7 +33,7 @@
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Projects
           </a>
-          <ul class="dropdown-menu">
+          <ul class="dropdown-menu bg-danger">
             <li><a class="dropdown-item" href="#apiproject">API Project</a></li>
             <li><a class="dropdown-item" href="#">React App</a></li>
             <li><a class="dropdown-item" href="#">JS anywhere code challenges</a></li>
