--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
   </head>
 <body class="bg-primary">
+  <div class="bg-danger">
   <header class="bg-danger">
-  <nav class="navbar navbar-expand-lg bg-body-tertiary ">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary bg-danger">
   <div class="container-fluid bg-secondary">
     <a class="navbar-brand" href="#">Steven Miller Portfolio</a>
     <button class="navbar-toggler bg-warning" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,6 +45,7 @@
   </div>
 </nav>
 </header>
+</div>
   <!-------header---------->
   
   <main>
