--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="bg-danger">
   <header class="bg-danger">
   <nav class="navbar navbar-expand-lg bg-body-tertiary bg-danger">
-  <div class="container-fluid bg-secondary">
+  <div class="container-fluid bg-danger">
     <a class="navbar-brand" href="#">Steven Miller Portfolio</a>
     <button class="navbar-toggler bg-warning" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -34,7 +34,7 @@
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Projects
           </a>
-          <ul class="dropdown-menu bg-danger">
+          <ul class="dropdown-menu bg-warning">
             <li><a class="dropdown-item" href="#apiproject">API Project</a></li>
             <li><a class="dropdown-item" href="#">React App</a></li>
             <li><a class="dropdown-item" href="#">JS anywhere code challenges</a></li>
