--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body class="bg-primary">
   <div class="bg-danger">
   <header class="bg-danger">
-  <nav class="navbar navbar-expand-lg bg-danger">
-  <div class="container-fluid bg-danger">
+  <nav class="navbar navbar-expand-lg bg-primary">
+  <div class="container-fluid bg-primary">
     <a class="navbar-brand" href="#">Steven Miller Portfolio</a>
     <button class="navbar-toggler bg-warning" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
