--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
   </head>
-<body class="bg-primary">
+<body class="bg-info">
   <div class="bg-danger">
   <header class="bg-danger">
   <nav class="navbar navbar-expand-lg bg-primary">
