--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <!-------header---------->
   
   <main>
-    <h1 class="bg-primary"  > Hi! I'm a Full Stack Developer</h1>
+    <h1> Hi! I'm a Full Stack Developer</h1>
     
     <div id="apiproject">
  <h3>API Project</h3> 
