--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header class="bg-danger">
   <nav class="navbar navbar-expand-lg bg-primary">
   <div class="container-fluid bg-primary">
-    <a class="navbar-brand" href="#">Steven Miller Portfolio</a>
+    <a class="navbar-brand" href="#"></a>
     <button class="navbar-toggler bg-warning" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -49,7 +49,7 @@
   <!-------header---------->
   
   <main>
-    <h1> Hi! I'm a Full Stack Developer</h1>
+    <h1> Hi! Welcome to my portfolio, my names Steven Miller and I'm a Full Stack Developer. </h1>
     
     <div id="apiproject">
  <h3>API Project</h3> 
