--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body class="bg-info">
   <div class="bg-danger">
   <header class="bg-danger">
-  <nav class="navbar navbar-expand-lg bg-primary">
-  <div class="container-fluid bg-primary">
+  <nav class="navbar navbar-expand-lg bg-info">
+  <div class="container-fluid bg-info">
     <a class="navbar-brand" href="#"></a>
-    <button class="navbar-toggler bg-warning" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler bg-info" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse bg-warning" id="navbarNavDropdown">
