--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
   </head>
 <body class="bg-info">
-  <div class="bg-danger">
-  <header class="bg-danger">
+  <div>
+  <header>
   <nav class="navbar navbar-expand-lg bg-info">
   <div class="container-fluid bg-info">
     <a class="navbar-brand" href="#"></a>
-    <button class="navbar-toggler bg-info" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler bg-primary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse bg-warning" id="navbarNavDropdown">
