--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
       <div>
     <div id="aboutcon">
-      <p class="about bg-info" >Hi!, my names Steven Everett Miller II and I'm a full-stack developer. I'm primarily self-taught but have utilized many different learning tools. I graduated from Alta High School in Sandy, UT in 2012 and studied at Brigham Young University in Provo, UT.</p>
+      <p class="about" >Hi!, my names Steven Everett Miller II and I'm a full-stack developer. I'm primarily self-taught but have utilized many different learning tools. I graduated from Alta High School in Sandy, UT in 2012 and studied at Brigham Young University in Provo, UT.</p>
     </div>
   <!-------------certificates-------------->
  <div id="certcon">
@@ -74,7 +74,7 @@
   <img class="certtall" src="55859D08-9C8A-42E1-89EB-ADC04DE79EBD.jpeg">
   <img class="certtall" src="AFB8402C-FB82-4072-88B7-F3A418A36D21.jpeg">
   </div>
-  <div id="concon" class="bg-info">
+  <div id="concon">
   <p>Email: sem2093@gmail.com</p>
       <p>Phone: 937-474-9664</p>
   </div>
