--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
   <!-------header---------->
   
   <main>
+    
+    <div class="centerh1">
     <h1> Hi! Welcome to my portfolio, my names Steven Miller and I'm a Full Stack Developer. </h1>
+    </div>
     
     <div id="apiproject">
  <h3>API Project</h3> 
