--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Steven Miller</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="https://sem2093.github.io/portfolio/css/styles.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
   </head>
 <body class="bg-info">
@@ -35,8 +35,8 @@
             Projects
           </a>
           <ul class="dropdown-menu bg-warning">
-            <li><a class="dropdown-item" href="#apiproject">API Project</a></li>
-            <li><a class="dropdown-item" href="#">React App</a></li>
+            <li><a class="dropdown-item" href="https://sem2093.github.io/apiproject/">API Projects</a></li>
+            <li><a class="dropdown-item" href="https://sem2093.github.io/react/">React Projects</a></li>
             <li><a class="dropdown-item" href="#">JS anywhere code challenges</a></li>
           </ul>
         </li>
