--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <ul class="dropdown-menu bg-warning">
             <li><a class="dropdown-item" href="https://sem2093.github.io/apiproject/">API Projects</a></li>
             <li><a class="dropdown-item" href="https://sem2093.github.io/react/">React Projects</a></li>
-            <li><a class="dropdown-item" href="#">JS anywhere code challenges</a></li>
+            <li><a class="dropdown-item" href="https://github.com/sem2093/HarvardCS50/blob/main/README.md">Harvard Python Course</a></li>
           </ul>
         </li>
       </ul>
