--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
     </div>
   </div>
   <div class="col-12">
-    <button class="btn btn-primary" type="submit">Submit form</button>
+    <div id="liveAlertPlaceholder"></div>
+<button type="submit" class="btn btn-primary" id="liveAlertBtn">Submit Form</button>
   </div>
 </form>
       
