--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <!-------header---------->
   
   <main>
-    <form class="row g-3 needs-validation" novalidate>
+    <form onSubmit={handleSubmit} class="row g-3 needs-validation" novalidate>
   <div class="col-md-4 position-relative">
     <label for="validationTooltip01" class="form-label">First name</label>
     <input type="text" class="form-control" id="validationTooltip01" value="Mark" required>
