--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   </div>
   <div class="col-12">
     <div id="liveAlertPlaceholder"></div>
-<button type="submit" class="btn btn-primary" id="liveAlertBtn">Submit Form</button>
+<button onclick="showAlert()" type="submit" class="btn btn-primary" id="liveAlertBtn">Submit Form</button>
   </div>
 </form>
       
