--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
     <form onSubmit={handleSubmit} class="row g-3 needs-validation" novalidate>
   <div class="col-md-4 position-relative">
     <label for="validationTooltip01" class="form-label">First name</label>
-    <input type="text" class="form-control" id="validationTooltip01" value="Mark" required>
+    <input type="text" class="form-control" id="validationTooltip01" value="" required>
     <div class="valid-tooltip">
       Looks good!
     </div>
   </div>
   <div class="col-md-4 position-relative">
     <label for="validationTooltip02" class="form-label">Last name</label>
-    <input type="text" class="form-control" id="validationTooltip02" value="Otto" required>
+    <input type="text" class="form-control" id="validationTooltip02" value="" required>
     <div class="valid-tooltip">
       Looks good!
     </div>
