--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
   <!-------header---------->
   
   <main>
+    <div class="form">
     <form onSubmit={handleSubmit} class="row g-3 needs-validation" novalidate>
   <div class="col-md-4 position-relative">
     <label for="validationTooltip01" class="form-label">First name</label>
@@ -77,6 +78,7 @@
 <button onclick="showAlert()" type="submit" class="btn btn-primary" id="liveAlertBtn">Submit Form</button>
   </div>
 </form>
+    </div>
       
     <div id="aboutcon">
       <p class="about" >Hi!, my names Steven Everett Miller II and I'm a full-stack developer. I'm primarily self-taught but have utilized many different learning tools. I graduated from Alta High School in Sandy, UT in 2012 and studied at Brigham Young University in Provo, UT.</p>
