--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <span class="input-group-text" id="validationTooltipUsernamePrepend">@</span>
       <input type="text" class="form-control" id="validationTooltipUsername" >
       </div>
-      <button onclick="showAlert()" class="btn btn-primary" id="liveAlertBtn">Submit Form</button>
+      <button onclick="showAlert()" class="btn btn-primary" id="liveAlertBtn">Submit</button>
     </div>
 </form>
     </div>
