--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   </div>
 </nav>
     <div class="form">
-    <form>
+    <form class="username">
   <div class="col-md-4 position-relative">
     <label for="username" class="form-label">GitHub Username</label>
     <div class="input-group has-validation">
