--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
   </head>
 <body>
+  <div id="carouselparent" class="carousel slide" data-ride="carousel"> 
+
+  </div>
   <div>
   <header>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -67,7 +70,7 @@
       <button onclick="showAlert()" class="btn btn-primary" id="liveAlertBtn">Submit</button>
     </div>
         <div id="liveAlertPlaceholder"></div>
-      <img src="..." class="d-block w-100" alt="...">
+      <img src=" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
       <nav class="navbar bg-body-tertiary" id="search">
