--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <button onclick="showAlert()" class="btn btn-primary" id="liveAlertBtn">Submit</button>
     </div>
         <div id="liveAlertPlaceholder"></div>
-      <img src=" class="d-block w-100" alt="...">
+      <img src="https://sem2093.github.io/portfolio/certificates/25ED913D-1804-49D4-8D26-0D62C38CCE57.jpeg" class="d-block w-100" alt="htmlcertification">
     </div>
     <div class="carousel-item">
       <nav class="navbar bg-body-tertiary" id="search">
