--- a/index.html
+++ b/index.html
@@ -49,8 +49,15 @@
  <div id="carouselparent" class="carousel slide" data-ride="carousel"> 
 
   </div>
-
-    
+    <div class="carousel-item active">
+<img src="https://sem2093.github.io/portfolio/certificates/FF3C612C-BF14-40A2-AB04-9C60CE8D8FDA.jpeg" class="d-block w-100" alt="csscertificate">
+    </div>
+      <div class="carousel-item">
+<img src="https://sem2093.github.io/portfolio/certificates/25ED913D-1804-49D4-8D26-0D62C38CCE57.jpeg" class="d-block w-100" alt="htmlcertification"> 
+      </div>
+      <div class="carousel-item">
+<img src="https://sem2093.github.io/portfolio/certificates/13752387-208C-4A54-BA74-73E4CAB92CCD.jpeg" class="d-block w-100" alt="pythoncertificate">
+      </div>
     <div id="carouselIndicators" class="carousel slide">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#username" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -83,7 +90,7 @@
     </form>
   </div>
 </nav>
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="https://sem2093.github.io/portfolio/certificates/FF3C612C-BF14-40A2-AB04-9C60CE8D8FDA.jpeg" class="d-block w-100" alt="csscertificate">
     </div>
     <div class="carousel-item">
       <button type="button" class="btn btn-outline-secondary">Facebook<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
@@ -92,7 +99,7 @@
       <button type="button" class="btn btn-outline-secondary">Github<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
   <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
 </svg></button>
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="https://sem2093.github.io/portfolio/certificates/13752387-208C-4A54-BA74-73E4CAB92CCD.jpeg" class="d-block w-100" alt="pythoncertificate">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
