--- a/index.html
+++ b/index.html
@@ -44,28 +44,63 @@
 </nav>
 </header>
 </div>
-  <!-------header---------->
+  <!----------------->
   <main>
  <div id="carouselparent" class="carousel slide" data-ride="carousel"> 
-
-  </div>
-    <div class="carousel-item active">
-<img src="https://sem2093.github.io/portfolio/certificates/FF3C612C-BF14-40A2-AB04-9C60CE8D8FDA.jpeg" class="d-block w-100" alt="csscertificate">
+   <div class="carousel-inner">
+     <div class="carousel-item active">
+       <img src="https://sem2093.github.io/portfolio/certificates/FF3C612C-BF14-40A2-AB04-9C60CE8D8FDA.jpeg" class="d-block w-100" alt="csscertificate">
     </div>
       <div class="carousel-item">
-<img src="https://sem2093.github.io/portfolio/certificates/25ED913D-1804-49D4-8D26-0D62C38CCE57.jpeg" class="d-block w-100" alt="htmlcertification"> 
+<img src="https://sem2093.github.io/portfolio/certificates/25ED913D-1804-49D4-8D26-0D62C38CCE57.jpeg" class="d-block w-100" alt="htmlcertificate"> 
       </div>
-      <div class="carousel-item">
+<div class="carousel-item">
 <img src="https://sem2093.github.io/portfolio/certificates/13752387-208C-4A54-BA74-73E4CAB92CCD.jpeg" class="d-block w-100" alt="pythoncertificate">
       </div>
+  </div>
+    <a class="carousel-control-prev" href="#SimpleCarouselExample" role="button" data-slide="prev">
+<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+<span class="sr-only">Previous</span>
+</a>
+<a class="carousel-control-next" href="#SimpleCarouselExample" role="button" data-slide="next">
+<span class="carousel-control-next-icon" aria-hidden="true"></span>
+<span class="sr-only">Next</span>
+</a>
+ </div>
+<!-------Pure Css Carousel---------->
+    <div class="slides">
+<div> 1 </div>
+<div> 2 </div>
+<div> 3 </div>
+</div>
+
+    .slides {
+display: flex;
+overflow-x: auto;
+scroll-snap-type: x mandatory;
+    }
+    .slides > div {
+display: flex;
+flex-shrink: 0;
+width: 100%;
+height: 300px;
+scroll-snap-align: start;
+scroll-behavior: smooth;
+background: #74ABE2;
+justify-content: center;
+align-items: center;
+font-size: 100px;
+}
+ <!----------------->
+
     <div id="carouselIndicators" class="carousel slide">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#username" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#search" data-bs-slide-to="1" aria-label="Slide 2"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
   </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
+      
+<!-------github username request---------->
       <div class="form">
     <form class="username" id="username">
   <div class="col-md-4 position-relative">
@@ -78,10 +113,9 @@
 </form>
       <button onclick="showAlert()" class="btn btn-primary" id="liveAlertBtn">Submit</button>
     </div>
+      
         <div id="liveAlertPlaceholder"></div>
-      <img src="https://sem2093.github.io/portfolio/certificates/25ED913D-1804-49D4-8D26-0D62C38CCE57.jpeg" class="d-block w-100" alt="htmlcertification">
-    </div>
-    <div class="carousel-item">
+      <!----------------->
       <nav class="navbar bg-body-tertiary" id="search">
   <div class="container-fluid">
     <form class="d-flex" role="search">
