--- a/index.html
+++ b/index.html
@@ -45,8 +45,17 @@
 </header>
 </div>
   <!----------------->
+const myCarousel = document.getElementById('myCarousel')
+
+myCarousel.addEventListener('slide.bs.carousel', event => {
+  direction:"right"
+  relatedTarget:
+})
+
+
+  <!----------------->
   <main>
- <div id="carouselparent" class="carousel slide" data-ride="carousel"> 
+ <div id="mycarousel" class="carousel slide" data-ride="carousel" data-bs-touch="true"> 
    <div class="carousel-inner">
      <div class="carousel-item active">
        <img src="https://sem2093.github.io/portfolio/certificates/FF3C612C-BF14-40A2-AB04-9C60CE8D8FDA.jpeg" class="d-block w-100" alt="csscertificate">
@@ -58,22 +67,17 @@
 <img src="https://sem2093.github.io/portfolio/certificates/13752387-208C-4A54-BA74-73E4CAB92CCD.jpeg" class="d-block w-100" alt="pythoncertificate">
       </div>
   </div>
-    <a class="carousel-control-prev" href="#SimpleCarouselExample" role="button" data-slide="prev">
+    <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev">
 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
 <span class="sr-only">Previous</span>
 </a>
-<a class="carousel-control-next" href="#SimpleCarouselExample" role="button" data-slide="next">
+<a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
 <span class="carousel-control-next-icon" aria-hidden="true"></span>
 <span class="sr-only">Next</span>
 </a>
  </div>
 <!-------Pure Css Carousel---------->
-    <div class="slides">
-<div class="indicator"> 1 </div>
-<div class="indicator"> 2 </div>
-<div class="indicator"> 3 </div>
-</div>
-
+    
     
  <!----------------->
 
